deployment/mingress/blog-ingress.yaml
apiVersion: v1
kind: Pod
metadata:
    name: example-app
    labels:
        app: example-app
spec:
    containers:
        -   name: example-app
            image: eriktrapman/phpinfo
            ports:
                -   containerPort: 9000
                    name: fastcgi

---
apiVersion: v1
kind: Service
metadata:
    name: example-service
spec:
    selector:
        app: example-app
    ports:
        -   port: 9000
            targetPort: 9000
            name: fastcgi

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    annotations:
        kubernetes.io/ingress.class: "nginx"
        nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
        nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
        nginx.ingress.kubernetes.io/fastcgi-params-configmap: "example-cm"
    name: example-app
spec:
    rules:
        -   http:
                paths:
                    -   backend:
                            serviceName: example-service
                            servicePort: fastcgi
